# sqlmodel

./: .gitignore  README.md  agent.py  agent_refactored.py  constants.py  db.py  experiment.py  new_sql.py  output.txt  prompts.py  pyproject.toml  requirements.txt  sql.py  utils.py
configs/: models_list.json  prompts.py
db/: analysis.db  analysis_db.db  db.py  queries.json  query.db
test/: llm.py  nlsql.py  sql.py
